@@ -10,6 +10,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2018-05-08 niel
+	Chg: Increase size of 'xref' column in collections' tables due to some larger sizes reported.
 2018-05-07 niel
 	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.6.0
 
